TRUNK-6469: Add support for automatic initialization of Envers audit tables (#5468)
(cherry picked from commit b276e078de004bb4eaa88d03875f8931548ae49a)