@@ -15,6 +15,8 @@ import java.sql.ResultSet;
 import java.sql.ResultSetMetaData;
 import java.sql.SQLException;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -45,9 +47,9 @@ public class DatabaseUtil {
 	private static final String JTDS_DRIVER = "net.sourceforge.jtds.jdbc.Driver";
 	private static final String SQLSERVER_DRIVER = "com.microsoft.jdbc.sqlserver.SQLServerDriver";
 	
-	private static final Set<String> ALLOWED_JDBC_DRIVERS = Set.of(
+	private static final Set<String> ALLOWED_JDBC_DRIVERS = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(
 		MYSQL_DRIVER, MYSQL_LEGACY_DRIVER, MARIADB_DRIVER, POSTGRESQL_DRIVER, H2_DRIVER, HSQLDB_DRIVER, ORACLE_DRIVER, SQLSERVER_DRIVER, JTDS_DRIVER
-	);
+	)));
 	
 	private static final Logger log = LoggerFactory.getLogger(DatabaseUtil.class);
 
